Fix about page word wrapping and add screenshot for HR2014 website

--- a/css/index.scss
+++ b/css/index.scss
@@ -83,6 +83,20 @@ img.about-left {
     }
 }
 
+.center-col {
+    width: 45%;
+    display: block;
+    text-align: center;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 20px;
+    img {
+        width: 95%;
+        margin-bottom: 10px;
+    }   
+    margin: 0 auto;
+}
+
 .standard-left-margin {
     margin-left: $standard-padding;
 }
